# lashflow-api

./: .env.example  .env.local  .gitignore  Dockerfile  docker-compose.local.yml  docker-compose.yml  lashflow.db  pyproject.toml  readme.md  requirements.txt
.github/workflows/: ci-cd.yml
alembic/: env.py
alembic/versions/: a1b2c3d4e5f6_add_maintenance_cycle_days.py  ae4721e425b2_initial_schema.py  b1c2d3e4f5a6_add_user_salon_and_apple_fields.py  c2d3e4f5a6b7_add_appointment_apple_event_uid.py  d3e4f5a6b7c8_add_professional_settings.py  e4f5a6b7c8d9_extra_services_and_payment_breakdown.py  f5a6b7c8d9e0_add_procedure_name_override.py  g6h7i8j9k0l1_add_removal_application_service_type.py  h7i8j9k0l1m2_add_appointment_procedures.py  i8j9k0l1m2n3_add_expense_id_to_stock_movements.py  j9k0l1m2n3o4_add_appointment_id_to_anamneses.py
app/: main.py
app/domain/: enums.py  exceptions.py
app/domain/entities/: __init__.py  anamnesis.py  appointment.py  (+13 more)
app/infrastructure/: database.py  settings.py
app/interface/: dependencies.py
docs/: 01-setup.md  02-auth.md  03-endpoints.md  04-data-model.md  05-testing.md  06-nextjs-integration.md  07-backend-improvements.md  08-nextjs-integration.md
tests/: conftest.py
tests/e2e/: test_appointments.py  test_auth.py  test_clients.py  test_expenses.py  test_public.py
tests/integration/: test_client_repository.py  test_expense_repository.py  test_user_repository.py
tests/unit/: test_appointment_service.py  test_client_service.py  test_expense_service.py  test_payment_service.py  test_slot_calculator.py  test_stock_service.py
(+53 files in other folders)
